fix(shs-6161): clean-up hero styles to fix spacing issue and remove unnecessary overrides

--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_pattern.gradient-hero.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_pattern.gradient-hero.scss
@@ -1,10 +1,5 @@
 .hb-gradient-hero {
   @include hb-hero-component;
-
-  .hs-full-width & {
-    margin-top: 0;
-  }
-
   &__image-wrapper {
     @include hb-hero-image-wrapper;
 
